--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,10 @@
 name = "movies"
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+rand = "0.8.5"
+serde = "1.0.188"
+serde_derive = "1.0.188"
+serde_json = "1.0.107"
+serde_yaml = "0.9.25"
